ns-deploy-lb.yml
---
# 네임스페이스 작성(별도의 프로젝트 공간)
apiVersion: v1
kind: Namespace
metadata: 
  name: samsung

---
# Deployment 작성
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: samsung-deploy
  namespace: samsung
  labels: 
    app: web
    part: cloud
spec:
  replicas: 3
  selector:  # 어떤 라벨을 확인할 것인가
    matchLabels:
      app: web
  template:  # pod에 대한 정의
    metadata: 
      labels:
        app: web
    spec:  # pod 내에 들어갈 것들 (컨테이너)
      containers:
        - name: web
          image: nginx
          ports:
            - containerPort: 80

---
# 서비스(로드 밸런서)
apiVersion: v1
kind: Service
metadata:
  name: samsung-lb
  namespace: samsung
spec:
  type: LoadBalancer
  selector:
    app: web  # 서비스가 어떤 Deployment를 선택할지 정의
  ports:
  
    - port: 80  # 서비스에서 사용할 포트
      targetPort: 80
