svc_deploy_main.yml
---
#svc-shop
apiVersion: v1
kind: Service
metadata:
  name: svc-main
spec:
  selector:
    app: main
  ports:
  - port: 80
    targetPort: 80





---
#deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: chlwhdals264/portal:main
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
