svc_deploy_news.yml
---
#svc-shop
apiVersion: v1
kind: Service
metadata:
  name: svc-news
spec:
  selector:
    app: news
  ports:
  - port: 80
    targetPort: 80





---
#deploy-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news
spec:
  replicas: 3
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
      - name: news
        image: nginx:latest
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

        volumeMounts:
        - name: news-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: news-volume
        configMap:
          name: news-config
